compile_error.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.12/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Task :compileJava
C:\wip\w3canvas\javacanvas\src\main\java\com\w3canvas\javacanvas\server\RenderingServer.java:87: error: cannot find symbol
                org.mozilla.javascript.Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                                                    ^
  symbol:   method getRhinoRuntime()
  location: variable javaCanvas of type JavaCanvas
1 error


FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/wip/w3canvas/javacanvas/build/reports/problems/problems-report.html
> Compilation failed; see the compiler output below.
  C:\wip\w3canvas\javacanvas\src\main\java\com\w3canvas\javacanvas\server\RenderingServer.java:87: error: cannot find symbol
                  org.mozilla.javascript.Scriptable scope = javaCanvas.getRhinoRuntime().getScope();
                                                                      ^
    symbol:   method getRhinoRuntime()
    location: variable javaCanvas of type JavaCanvas
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 7s
1 actionable task: 1 executed
